k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: energy-forecast-service
  labels:
    app: energy-forecast
spec:
  selector:
    app: energy-forecast
  ports:
    - name: http
      protocol: TCP
      port: 80            # external port
      targetPort: 8080    # container port
  type: LoadBalancer     # change to ClusterIP if using Ingress only
